--- a/src/components/box.css
+++ b/src/components/box.css
@@ -78,12 +78,19 @@ align-items: center;
     position: absolute;
     right: 10%;
 }
+.your{
+    position: absolute;
+    margin-left: 130px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    margin-top: 130px;
+}
 @media only screen and (max-width: 600px){
   .image{
     height: 300px;
   }
   .box{
-    height: 580px;
+    height: 600px;
   }
   .ash{
     
@@ -137,6 +144,13 @@ align-items: center;
     margin-bottom: 20px;
     width: 90%;
     position: relative;
+}
+.your{
+    position: absolute;
+    margin-left: 70px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    margin-top: 130px;
 }
 
 }
