--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
 body{
   overflow-x:hidden ;
+  overflow-y: hidden;
   padding:30px;
   background-color: antiquewhite;
+}
+@media only screen and (max-width: 600px){
+  body{
+    overflow-x:hidden ;
+  overflow-y: hidden;
+  padding:10px;
+  background-color: antiquewhite;
+  }
 }
