--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body{
   body{
     overflow-x:hidden ;
   overflow-y: hidden;
-  padding:10px;
-  background-color: antiquewhite;
+  background-color: white;
+padding: 10px;
+  
   }
 }
