--- a/src/components/box.css
+++ b/src/components/box.css
@@ -53,8 +53,10 @@ align-items: center;
 }
 .add{
  position: absolute;
- top: 15%;
+ top: 16%;
  right: 13%;
+ background: transparent;
+ border:none;
 }
 .folder{
     padding: 25px;
@@ -152,7 +154,7 @@ align-items: center;
     padding:20px 0px;
 }
 .list{
-    margin-bottom: 20px;
+    margin-top: 24px;
     width: 90%;
     position: relative;
 }
@@ -163,8 +165,4 @@ align-items: center;
     font-size: 15px;
     margin-top: 100px;
 }
-
-}
-@media (min-width: 600px) and (max-width: 959px){
-
 }
