--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body{
   overflow-x:hidden ;
   overflow-y: hidden;
-  padding: 10px 30px;
+  padding: 30px;
   background-color: antiquewhite!important;
 }
 @media only screen and (max-width: 600px){
